# precon

./: CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  remote_control.py  requirements.txt  setup.cfg  setup.py  steering.py
.github/workflows/: python-app.yml
requirements/: app.txt  dev.txt
src/: commands.py  exploring.py  mapping.py  remote_control.py
src/devices_handlers/: distance_sensor.py  driving_engines.py  gyroscope.py
src/precon/: commands.py  exploring.py  remote_control.py
src/precon/devices_handlers/: distance_sensor.py  driving_engines.py
tests/: test_commands.py  test_distance_sensor_handler.py  test_driving_engines_handler.py  test_explorator.py  test_explorer.py  test_localizing.py  test_mapping.py  test_path_planner.py  test_remote_control.py
